changed the system name

--- a/architectural design specification latex/architectural_design_specification.tex
+++ b/architectural design specification latex/architectural_design_specification.tex
@@ -113,13 +113,19 @@
 \section{Subsystem Definitions \& Data Flow}
 \input{tex/data_flow.tex}
 \newpage
-\section{X Layer Subsystems}
+\section{Sign Up}
 \input{tex/x_layer_subsystems.tex}
 \newpage
-\section{Y Layer Subsystems}
+\section{Login}
 \input{tex/y_layer_subsystems.tex}
 \newpage
-\section{Z Layer Subsystems}
+\section{Add Self}
+\input{tex/z_layer_subsystems.tex}
+\newpage
+\section{Search}
+\input{tex/z_layer_subsystems.tex}
+\newpage
+\section{Add Item}
 \input{tex/z_layer_subsystems.tex}
 \newpage
 
