Updates from Overleaf

--- a/architectural design specification latex/architectural_design_specification.tex
+++ b/architectural design specification latex/architectural_design_specification.tex
@@ -70,7 +70,7 @@
 \vspace{0.5 in}
 \begin{figure}[h!]
 	\centering
-   	\includegraphics[width=0.60\textwidth]{images/test_image}
+   	\includegraphics[width=0.60\textwidth]{images/logo}
 \end{figure}
 \vspace{0.5 in}
 {\centering \huge \color{accentcolor} \sc \textbf{\teamname \\ \productname} \par}
@@ -85,11 +85,11 @@
 
 %%% Revision History
 \begin{versionhistory}
-  	\vhEntry{0.1}{10.01.2015}{GH}{document creation}
-  	\vhEntry{0.2}{10.05.2015}{AT|GH}{complete draft}
-  	\vhEntry{0.3}{10.12.2015}{AT|GH}{release candidate 1}
-  	\vhEntry{1.0}{10.20.2015}{AT|GH|CB}{official release}
-  	\vhEntry{1.1}{10.31.2015}{AL}{added design review requests}
+  	\vhEntry{0.1}{08.01.2019}{SK}{document creation}
+  	\vhEntry{0.2}{08.02.2019}{SK|UC|SN|BA|TG}{complete draft}
+  	\vhEntry{0.3}{08.02.2019}{SK|UC}{release candidate 1}
+  	\vhEntry{1.0}{08.02.2019}{SK|SN|BA}{official release}
+  	\vhEntry{1.1}{10.31.2015}{TG|UC}{added design review requests}
 \end{versionhistory}
 \newpage
 
