--- a/architectural design specification latex/tex/x_layer_subsystems.tex
+++ b/architectural design specification latex/tex/x_layer_subsystems.tex
@@ -1,4 +1,4 @@
-This is the first sub section that user interacts with. When the user opens the mobile application for the first time details for sign up is displayed.
+This is the first sub section that user interacts with. When the user opens the mobile application for the first time details for sign up is displayed. Then the user enters all the information required for sign up including all the valid username and password to create a account. Then an account for the user is created.
 
 In this section, the layer is described in some detail in terms of its specific subsystems. Describe each of the layers and its subsystems in a separate chapter/major subsection of this document. The content of each subsystem description should be similar. Include in this section any special considerations and/or trade-offs considered for the approach you have chosen.
 
