--- a/architectural design specification latex/tex/system_overview.tex
+++ b/architectural design specification latex/tex/system_overview.tex
@@ -13,5 +13,5 @@ This is the initial step that is needed to to taken by the user. This layer allo
 \subsection{LogIn}
 If user clicks LogIn in L/R\_UI, user is redirected to this layer. This layer allow the existing User to login to their account. This layer user to input username and password. Similarly username and password is validated prior to any execution to any query. If valid input are given, layer will logged the user to their respective user home\_UI, if user are registered prior to login.
 
-\subsection{Layer Z Description}
-Each layer should be described separately in detail. Descriptions should include the features, functions, critical interfaces and interactions of the layer. The description should clearly define the services that the layer provides. Also include any conventions that your team will use in describing the structure: naming conventions for layers, subsystems, modules, and data flows; interface specifications; how layers and subsystems are defined; etc. 
+\subsection{AddItem}
+Once user is Logged in to the system, this layer will allow user to add item to the inventory. User are required to provide the item description, after which all the input are validated prior to use for any queries. All the valid input are sent to QR\_Generator, where QR is created for the item, QR\_Generator will send the QR image along with item description to DB\_Controller, where DB\_Controller will find the spot to keep. Once spot is assigned it will return the the QR image and Shelf information to DisplayUI. Which will display the information of the shelf, where it is added along with item description. 
