Updates from Overleaf

--- a/architectural design specification latex/tex/x_layer_subsystems.tex
+++ b/architectural design specification latex/tex/x_layer_subsystems.tex
@@ -13,7 +13,7 @@ This sub system just deals with the input validation. This subsystem is created 
 Following assumptions are made for this SubSystem:
 \begin{itemize}
     \item Inventory app is already installed on users cellphone.
-    \item User clicked on the SignUp or Login button after filling all the required information in the home screen.
+    \item User clicked on the SignUp/Login button. after filling all the required information in the home screen.
 \end{itemize}
 
 \subsubsection{Responsibilities}
