Updates from Overleaf

--- a/architectural design specification latex/architectural_design_specification.tex
+++ b/architectural design specification latex/architectural_design_specification.tex
@@ -119,7 +119,7 @@
 \section{Login}
 \input{tex/y_layer_subsystems.tex}
 \newpage
-\section{Add Self}
+\section{Add Shelf}
 \input{tex/z_layer_subsystems.tex}
 \newpage
 \section{Search}
