Updates from Overleaf

--- a/architectural design specification latex/architectural_design_specification.tex
+++ b/architectural design specification latex/architectural_design_specification.tex
@@ -125,7 +125,7 @@
 \section{Search}
 \input{tex/z_layer_subsystems.tex}
 \newpage
-\section{Add Self}
+\section{Add Shelf}
 \input{tex/z_layer_subsystems.tex}
 \newpage
 
