--- a/architectural design specification latex/tex/z_layer_subsystems.tex
+++ b/architectural design specification latex/tex/z_layer_subsystems.tex
@@ -1,6 +1,6 @@
 This layer is active when user wants to add item. When user clicks on the add item icon in the homeUI the add item page is displayed. User provides the description of items 
 
-\subsection{Subsystem 1}
+\subsection{Shelf Description}
 This section should be a general description of a particular subsystem for the given layer. For most subsystems, an extract of the architectural block diagram with data flows is useful. This should consist of the subsystem being described and those subsystems with which it communicates.
 
 \begin{figure}[h!]
