some changes made

--- a/architectural design specification latex/tex/z_layer_subsystems.tex
+++ b/architectural design specification latex/tex/z_layer_subsystems.tex
@@ -9,7 +9,10 @@ This SubSystem deals with taking the item description from user. Variety of opti
 \end{figure}
 
 \subsubsection{Assumptions}
-Any assumptions made in the definition of the subsystem should be listed and described. Pay particular attention to assumptions concerning interfaces and interactions with other layers.
+These are the following assumptions made about this subsection:
+\begin{itemize}
+    \item 
+\end{itemize}
 
 \subsubsection{Responsibilities}
 Each of the responsibilities/features/functions/services of the subsystem as identified in the architectural summary must be expanded to more detailed responsibilities. These responsibilities form the basis for the identification of the finer-grained responsibilities of the layer's internal subsystems. Clearly describe what each subsystem does.
