--- a/architectural design specification latex/tex/x_layer_subsystems.tex
+++ b/architectural design specification latex/tex/x_layer_subsystems.tex
@@ -1,4 +1,4 @@
-This is the first sub section that user interacts with. When the user opens the mobile application for the first time details for SignUp is displayed. Then the user enters all the information required for SignUp including all the valid username and password to create a account. Then an account for the user is created.
+This is the first sub section that user interacts with. When the user opens the mobile application for the first time details for SignUp is displayed. Then the user enters all the information required for SignUp including all the valid user name and password to create a account. Then an account for the user is created.
 
 \subsection{Input Validation}
 This sub system just deals with the input validation. This subsystem is created to prevent form SQL injection. Input validation takes the input of the user and checks if the input is SQL query and discards if input is query or malicious input.
@@ -78,7 +78,7 @@ Each of the inputs and outputs for the subsystem are defined here. Create a tabl
 
 
 \subsection{DB Controller}
-This is the subsystem that deals with the database part of the Application. It is responsible for taking all the user input provided in the SignUp form and store it in the database accordingly.
+This is the subsystem that deals with the database part of the application. It is responsible for taking all the user input provided in the SignUp form and store it in the database accordingly.
 
 \begin{figure}[h!]
 	\centering
@@ -89,11 +89,15 @@ This is the subsystem that deals with the database part of the Application. It i
 \subsubsection{Assumptions}
 Following assumptions are made about this SubSystem:
 \begin{itemize}
-    \item 
+    \item Input entered in the form is valid input. Sql Query's written in the form is discarded. 
+    \item Device has active internet connection.
 \end{itemize}
 
 \subsubsection{Responsibilities}
-Each of the responsibilities/features/functions/services of the subsystem as identified in the architectural summary must be expanded to more detailed responsibilities. These responsibilities form the basis for the identification of the finer-grained responsibilities of the layer's internal subsystems. Clearly describe what each subsystem does.
+These are the following responsibilities of this subsystem:
+\begin{itemize}
+    \item This subsection must take all the input provided in the form and store it in the database.
+\end{itemize}
 
 \subsubsection{Subsystem Interfaces}
 Each of the inputs and outputs for the subsystem are defined here. Create a table with an entry for each labelled interface that connects to this subsystem. For each entry, describe any incoming and outgoing data elements will pass through this interface.
