--- a/architectural design specification latex/tex/y_layer_subsystems.tex
+++ b/architectural design specification latex/tex/y_layer_subsystems.tex
@@ -1,7 +1,7 @@
-In this section, the layer is described in some detail in terms of its specific subsystems. Describe each of the layers and its subsystems in a separate chapter/major subsection of this document. The content of each subsystem description should be similar. Include in this section any special considerations and/or trade-offs considered for the approach you have chosen.
+In this section, the user is prompted to the login page. The user have to use the existing login information to login and access to the system account. 
 
-\subsection{Subsystem 1}
-This section should be a general description of a particular subsystem for the given layer. For most subsystems, an extract of the architectural block diagram with data flows is useful. This should consist of the subsystem being described and those subsystems with which it communicates.
+\subsection{Input Validation}
+This section validates the inputs given for the login information. This sub system checks if the user ID and Password is already registered in the system or not. Only the previously registered account information is validated and given access.
 
 \begin{figure}[h!]
 	\centering
@@ -10,10 +10,17 @@ This section should be a general description of a particular subsystem for the g
 \end{figure}
 
 \subsubsection{Assumptions}
-Any assumptions made in the definition of the subsystem should be listed and described. Pay particular attention to assumptions concerning interfaces and interactions with other layers.
+Following assumptions are made for this system:
+\begin{itemize}
+    \item Inventory app is already installed on the users cellphone.
+    \item User clicked on the Login button after giving Username and Password information.
+\end{itemize}
 
 \subsubsection{Responsibilities}
-Each of the responsibilities/features/functions/services of the subsystem as identified in the architectural summary must be expanded to more detailed responsibilities. These responsibilities form the basis for the identification of the finer-grained responsibilities of the layer's internal subsystems. Clearly describe what each subsystem does.
+Following are the responsibilities of this sub system:
+\begin{itemize}
+    \item This sub system must check if the user inputs (Username and Password) is already registered in the system. If the information is already in the system, then it will allow the user to access their account.
+\end{itemize}
 
 \subsubsection{Subsystem Interfaces}
 Each of the inputs and outputs for the subsystem are defined here. Create a table with an entry for each labelled interface that connects to this subsystem. For each entry, describe any incoming and outgoing data elements will pass through this interface.
