--- a/architectural design specification latex/tex/system_overview.tex
+++ b/architectural design specification latex/tex/system_overview.tex
@@ -23,4 +23,4 @@ Logged user have the option to add the customized shelf. This layer will allow u
 Search is one of the core feature of our application. User are able to search any item in the inventory based on the entered text or the QR code that is generated during adding shelf. Once the application gets the user input, it looks up on the Database, then the application pulls the image of the item on the shelf, if the item is what user is looking for s/he clicks confirm which is then shown to user via Search\_UI.
 
 \subsection{Home\_UI}
-Home\_UI is the graphic feature of the application. It is responsible for generating necessary UI shown to the user. Once user logged in to his/her account, application will redirect them to Home\_UI, from where they can toggle between 
+Home\_UI is the graphic feature of the application. It is responsible for generating necessary UI shown to the user. Once user logged in to his/her account, application will redirect them to Home\_UI, from where they can toggle between all the feature of the application. For each click Home\_UI will pass the 
