Updates from Overleaf

--- a/architectural design specification latex/tex/y_layer_subsystems.tex
+++ b/architectural design specification latex/tex/y_layer_subsystems.tex
@@ -1,4 +1,4 @@
-This is another important layer in our design. This layer deals with login function pf the app. In a broad sense this layer is responsible for allowing or denying the user to use the app. When user enters user-name and password in login UI then login layer takes all the input checks against database and if valid, lets user use the app, else rejects user from using the app.
+This is another important layer in our design. This layer deals with login function of the app. In a broad sense this layer is responsible for allowing or denying the user to use the app. When user enters user-name and password in login UI then login layer takes all the input checks against database and if valid, lets user use the app, else rejects user from using the app.
 
 \subsection{User Id/PWD validation}
 This section should be a general description of a particular subsystem for the given layer. For most subsystems, an extract of the architectural block diagram with data flows is useful. This should consist of the subsystem being described and those subsystems with which it communicates.
