--- a/architectural design specification latex/architectural_design_specification.tex
+++ b/architectural design specification latex/architectural_design_specification.tex
@@ -113,21 +113,16 @@
 \section{Subsystem Definitions \& Data Flow}
 \input{tex/data_flow.tex}
 \newpage
-\section{Sign Up}
+\section{User Interface (UI)}
 \input{tex/x_layer_subsystems.tex}
 \newpage
-\section{Login}
+\section{Business Logic}
 \input{tex/y_layer_subsystems.tex}
 \newpage
-\section{Add Item}
+\section{Database}
 \input{tex/z_layer_subsystems.tex}
 \newpage
-\section{Search}
-\input{tex/z_layer_subsystems.tex}
-\newpage
-\section{Add Shelf}
-\input{tex/z_layer_subsystems.tex}
-\newpage
+
 
 %%% References
 \bibliographystyle{plain}
