Updates from Overleaf

--- a/architectural design specification latex/architectural_design_specification.tex
+++ b/architectural design specification latex/architectural_design_specification.tex
@@ -28,7 +28,7 @@
 %%% Definitions
 \definecolor{accentcolor}{rgb}{0.0,0.0,0.5} 
 \newcommand{\teamname}{Nepster}
-\newcommand{\productname}{Pocket Self}
+\newcommand{\productname}{Pocket Shelf}
 \newcommand{\coursename}{CSE 4316: Senior Design I}
 \newcommand{\semester}{Summer 2019}
 \newcommand{\docname}{Architectural Design Specification}
@@ -113,7 +113,7 @@
 \section{Subsystem Definitions \& Data Flow}
 \input{tex/data_flow.tex}
 \newpage
-\section{Sign Up}
+\section{UI}
 \input{tex/x_layer_subsystems.tex}
 \newpage
 \section{Login}
