--- a/architectural design specification latex/tex/x_layer_subsystems.tex
+++ b/architectural design specification latex/tex/x_layer_subsystems.tex
@@ -48,17 +48,21 @@ Each of the inputs and outputs for the subsystem are defined here. Create a tabl
 \subsubsection{Assumptions}
 Following assumptions are made about this SubSystem:
 \begin{itemize}
-    \item 
+    \item User clicked on the login or signup button in the home screen.
+    \item Users cellphone is connected to the internet.
+    \item User has a valid Email address.
+    \item User provides the password that satisfies the basic password constrain
 \end{itemize}
 
 \subsubsection{Responsibilities}
 These are the following responsibilities of this subsystem:
 \begin{itemize}
-    \item 
+    \item Email address must be validated. If Email address doesn’t exist or is not valid, SubSystem must prevent from creating or acessing the account.
+    \item If the password doesn’t meet minimum criteria, SubSystem must prevent user form creating account.
 \end{itemize}
 
 \subsubsection{Subsystem Interfaces}
-Each of the inputs and outputs for the subsystem are defined here. Create a table with an entry for each labelled interface that connects to this subsystem. For each entry, describe any incoming and outgoing data elements will pass through this interface.
+Each of the inputs and outputs for the subsystem are defined here. An entry for each labelled interface that connects to this subsystem is shown in the table below:
 
 \begin {table}[H]
 \caption {Subsystem interfaces} 
@@ -66,8 +70,8 @@ Each of the inputs and outputs for the subsystem are defined here. Create a tabl
     \begin{tabular}{ | p{1cm} | p{6cm} | p{3cm} | p{3cm} |}
     \hline
     ID & Description & Inputs & Outputs \\ \hline
-    \#xx & Description of the interface/bus & \pbox{3cm}{input 1 \\ input 2} & \pbox{3cm}{output 1}  \\ \hline
-    \#xx & Description of the interface/bus & \pbox{3cm}{N/A} & \pbox{3cm}{output 1}  \\ \hline
+    \#1 & login & \pbox{3cm}{user} & \pbox{3cm}{user id \\ password}  \\ \hline
+    \#2 & Login & \pbox{3cm}{N/A} & \pbox{3cm}{msg from UI Controller}  \\ \hline
     \end{tabular}
 \end{center}
 \end{table}
@@ -84,12 +88,17 @@ Each of the inputs and outputs for the subsystem are defined here. Create a tabl
 \subsubsection{Assumptions}
 Following are the assumption of SubSection Email/Password Validation:
 \begin{itemize}
-    \item
+    \item User clicked on the register button.
+    \item Users cellphone is connected to the internet.
+    \item The user inputs all the information in the sign up form.
+    \item The User ID and Password input is valid meeting the minimum criteria.
 \end{itemize}
 \subsubsection{Responsibilities}
 Following responsibilities must be carried out by this SubSystem:
 \begin{itemize}
-    \item
+    \item Email address, user name and the password is validated. If the provided email address is not valid then user is not allowed to register for the account.
+    \item The system must only accept a unique username and a unique email address.
+    \item User password must satisfy minimum criteria for the assword constrain.
 \end{itemize}
 
 \subsubsection{Subsystem Interfaces}
@@ -101,14 +110,14 @@ Each of the inputs and outputs for the subsystem are defined here. Create a tabl
     \begin{tabular}{ | p{1cm} | p{6cm} | p{3cm} | p{3cm} |}
     \hline
     ID & Description & Inputs & Outputs \\ \hline
-    \#xx & Description of the interface/bus & \pbox{3cm}{input 1 \\ input 2} & \pbox{3cm}{output 1}  \\ \hline
-    \#xx & Description of the interface/bus & \pbox{3cm}{N/A} & \pbox{3cm}{output 1}  \\ \hline
+    \#xx & Register & \pbox{3cm}{user} & \pbox{3cm}{output 1}  \\ \hline
+    \#xx & Register & \pbox{3cm}{N/A} & \pbox{3cm}{output 1}  \\ \hline
     \end{tabular}
 \end{center}
 \end{table}
 
 
-\subsection{Add Self}
+\subsection{Add Shelf}
 
 
 \begin{figure}[h!]
@@ -120,17 +129,20 @@ Each of the inputs and outputs for the subsystem are defined here. Create a tabl
 \subsubsection{Assumptions}
 Following assumptions are made about this SubSystem:
 \begin{itemize}
-    \item 
+    \item User clicked on the add shelf button
+    \item Users cellphone is connected to the internet.
+    \item User inputs all the information required to create a new shelf
+    \item User inputs a valid measurement dimensions.
 \end{itemize}
 
 \subsubsection{Responsibilities}
 These are the following responsibilities of this subsystem:
 \begin{itemize}
-    \item 
+    \item The system validate the measurement.
 \end{itemize}
 
 \subsubsection{Subsystem Interfaces}
-Each of the inputs and outputs for the subsystem are defined here. Create a table with an entry for each labelled interface that connects to this subsystem. For each entry, describe any incoming and outgoing data elements will pass through this interface.
+Each of the inputs and outputs for the Add shelf subsystem are defined here.
 
 \begin {table}[H]
 \caption {Subsystem interfaces} 
@@ -138,8 +150,8 @@ Each of the inputs and outputs for the subsystem are defined here. Create a tabl
     \begin{tabular}{ | p{1cm} | p{6cm} | p{3cm} | p{3cm} |}
     \hline
     ID & Description & Inputs & Outputs \\ \hline
-    \#xx & Description of the interface/bus & \pbox{3cm}{input 1 \\ input 2} & \pbox{3cm}{output 1}  \\ \hline
-    \#xx & Description of the interface/bus & \pbox{3cm}{N/A} & \pbox{3cm}{output 1}  \\ \hline
+    \#xx & Add shelf & \pbox{3cm}{input 1 \\ input 2} & \pbox{3cm}{output 1}  \\ \hline
+    \#xx & Add shelf & \pbox{3cm}{N/A} & \pbox{3cm}{output 1}  \\ \hline
     \end{tabular}
 \end{center}
 \end{table}
@@ -156,7 +168,9 @@ Each of the inputs and outputs for the subsystem are defined here. Create a tabl
 \subsubsection{Assumptions}
 Following assumptions are made about this SubSystem:
 \begin{itemize}
-    \item 
+    \item User clicked on add item button
+    \item Users cell phone is connected to the internet
+    \item User input detailed description about the item.
 \end{itemize}
 
 \subsubsection{Responsibilities}
@@ -174,8 +188,8 @@ Each of the inputs and outputs for the subsystem are defined here. Create a tabl
     \begin{tabular}{ | p{1cm} | p{6cm} | p{3cm} | p{3cm} |}
     \hline
     ID & Description & Inputs & Outputs \\ \hline
-    \#xx & Description of the interface/bus & \pbox{3cm}{input 1 \\ input 2} & \pbox{3cm}{output 1}  \\ \hline
-    \#xx & Description of the interface/bus & \pbox{3cm}{N/A} & \pbox{3cm}{output 1}  \\ \hline
+    \#xx & Add Item & \pbox{3cm}{input 1 \\ input 2} & \pbox{3cm}{output 1}  \\ \hline
+    \#xx & Add Item & \pbox{3cm}{N/A} & \pbox{3cm}{output 1}  \\ \hline
     \end{tabular}
 \end{center}
 \end{table}
@@ -192,13 +206,16 @@ Each of the inputs and outputs for the subsystem are defined here. Create a tabl
 \subsubsection{Assumptions}
 Following assumptions are made about this SubSystem:
 \begin{itemize}
-    \item 
+    \item User clicked on the search button
+    \item Users cell phone is connected to the internet
+    \item User search for the item with either bar code or manually. If search is with the bar code camera is accessed to scan the bar code and if the search is manual then a text entry field is available.
 \end{itemize}
 
 \subsubsection{Responsibilities}
 These are the following responsibilities of this subsystem:
 \begin{itemize}
-    \item 
+    \item For the bar code search the system must access the camera and open it to scan the code.
+    \item For the manual search the system must provide a text field entry.
 \end{itemize}
 
 \subsubsection{Subsystem Interfaces}
@@ -210,8 +227,8 @@ Each of the inputs and outputs for the subsystem are defined here. Create a tabl
     \begin{tabular}{ | p{1cm} | p{6cm} | p{3cm} | p{3cm} |}
     \hline
     ID & Description & Inputs & Outputs \\ \hline
-    \#xx & Description of the interface/bus & \pbox{3cm}{input 1 \\ input 2} & \pbox{3cm}{output 1}  \\ \hline
-    \#xx & Description of the interface/bus & \pbox{3cm}{N/A} & \pbox{3cm}{output 1}  \\ \hline
+    \#xx & Search & \pbox{3cm}{input 1 \\ input 2} & \pbox{3cm}{output 1}  \\ \hline
+    \#xx & Search & \pbox{3cm}{N/A} & \pbox{3cm}{output 1}  \\ \hline
     \end{tabular}
 \end{center}
 \end{table}
